[workspace]
members = [
    "crates/blaze",
    "crates/bzc_lexer",
    "crates/bzc_parser",
    "crates/bzc_shared",
    "crates/bzc_llvm"
]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false

[profile.release.package."*"]
debug = 0
opt-level = 3
codegen-units = 1