[workspace]
members = [
    "crates/blazex",
    "crates/bzxc_lexer",
    "crates/bzxc_parser",
    "crates/bzxc_shared",
    "crates/bzxc_llvm",
    "crates/bzxc_llvm_wrapper",
    "crates/bzxc_type_checker"
]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false

[profile.release.package."*"]
debug = 0
opt-level = 3
codegen-units = 1