[package]
name = "blazescript"
version = "0.1.0"
authors = ["RoMeAh <romeah@blazify.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.25", default_features = false }
bincode = "1.3.3"
structopt = "0.3.21"
notify = "4.0.17"
cfg-if = "0.1"
bzsc_llvm = { path = "../bzsc_llvm", optional = true }
blaze_vm = { path = "../blaze_vm" }
bzsc_lexer = { path = "../bzsc_lexer" }
bzsc_parser = { path = "../bzsc_parser" }
bzsc_bytecode = { path = "../bzsc_bytecode" }
bzs_shared = { path = "../bzs_shared" }


[dev-dependencies]
criterion = "0.3"

[features]
default = []
llvm-jit = ["bzsc_llvm"]

[[bench]]
name = "blazescript"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false

[profile.release.package."*"]
debug = 0
opt-level = 3
codegen-units = 1