[package]
name = "blazex"
version = "0.1.0"
authors = ["RoMeAh <romeah@blazify.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.25", default_features = false }
inkwell = { path = "../bzxc_llvm_wrapper" }
structopt = "0.3.21"
notify = "4.0.17"
bzxc_llvm = { path = "../bzxc_llvm" }
bzxc_lexer = { path = "../bzxc_lexer" }
bzxc_parser = { path = "../bzxc_parser" }
bzxc_shared = { path = "../bzxc_shared" }


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "blazex"
harness = false
