[package]
name = "blazex"
version = "0.0.1"
authors = ["RoMeAh <romeah@blazify.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.25", default_features = false }
structopt = "0.3.21"
notify = "4.0.17"
llvm-sys = "100.0"
bzxc_lexer = { path = "../bzxc_lexer" }
bzxc_parser = { path = "../bzxc_parser" }
bzxc_type_system = { path = "../bzxc_type_system" }
bzxc_llvm = { path = "../bzxc_llvm" }
bzxc_shared = { path = "../bzxc_shared" }

[build-dependencies]
cc = "1.0"