[package]
name = "bzxc_llvm_wrapper"
version = "0.1.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "Safe LLVM Wrapper, Fork of Inkwell"
license = "Apache-2.0"
edition = "2018"

[dependencies]
either = "1.5"
inkwell_internals = { path = "./internal_macros", version = "0.3.0" }
libc = "0.2"
llvm-sys = "110.0"
once_cell = "1.4.1"
parking_lot = "0.11"
regex = "1"
